# wcsvr

./: .gitignore  README.md
wcserver/src/: CMakeLists.txt  linuxsvr.h  main.cpp  resource.h  version.aps  version.h  version.h.in  version.rc  winsvr.h
wcserver/src/scripts/: wcsvrd
